# GRIME

./: .dockerignore  .env.example  .env.prod-sim.example  .gitattributes  .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
api/app/: auth.py  celery_app.py  constants.py  database.py  main.py  models.py  schemas.py
api/app/core/: config.py
api/app/middleware/: __init__.py  global_rate_limit.py  organization.py  rate_limit.py  request_body_limit.py  security_headers.py
api/app/routes/: access_requests.py  advanced_features.py  ai.py  compartments.py  data_sources.py  executions.py  issues.py  processing.py  reports.py  rules.py  search.py  storage.py
api/app/security/: sandbox.py
api/app/services/: ai_service.py  anomaly_detection.py  cache.py  data_catalog_service.py  data_import.py  data_quality.py  data_source_service.py  dataset_fixes.py  dependency_manager.py  email.py  enhanced_rule_engine.py  export.py  guest.py  guest_cleanup.py  rule_engine.py  rule_templates.py  rule_versioning.py
api/migrations/: MIGRATION_POLICY.md  README.md
api/tests/: conftest.py  create_test_rules.py  test_core_utils.py  test_guest_security.py  test_metrics.py  test_sandbox_security.py  test_services.py  test_upload.py
docker/backend/: Dockerfile
docker/compose/: docker-compose.dev.yml  docker-compose.prod-sim.yml  docker-compose.yml
docker/frontend/: Dockerfile
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: middleware.ts  proxy.ts
llm_guardrails/: __init__.py  cli.py  findings_writer.py  impact_analyzer.py  manifest_loader.py  models.py
scripts/: init-db.sh  setup.sh  wait-for-db.sh
scripts/prod-sim/: health-check.sh  start.sh  stop.sh
terraform/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/environments/: prod.tfvars.example
tests/: conftest.py  simple_performance_test.py  test_endpoints.sh  test_enhanced_performance.py  test_llm_guardrails.py  test_rules.json
(+167 files in other folders)
