[project]
name = "api"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "click>=8.3.2",
    "fastapi>=0.135.3",
    "h11>=0.16.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=5.0.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.44.0",
    "uvloop>=0.22.1",
    "pytest>=9.0.3",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
